fix for too low grid col/row cap

--- a/style.css
+++ b/style.css
@@ -87,13 +87,12 @@ body {
 
 .gridBox {
     height: 480px;
-    width:400px;
+    width:600px;
     margin-bottom: auto;
     margin-left: auto;
     margin-right: auto;
     background-color: blue;
     display: grid;
-    gap:2px;
     grid-auto-flow: row;
     grid-template-columns: repeat(var(--colNum), auto);
     grid-template-rows: repeat(var(--rowNum), auto);
@@ -104,8 +103,8 @@ body {
 .grid {
     display: flex;
     flex: 1 1 10px;
-    border: 2px solid red;
     flex-flow: row wrap;
+    border: 1px solid rgba(0,0,0,0.1);
     background-color: white;
 }
 .active {
